# new6

./: ARCHITECTURE.md  LICENSE  ORG_DOCTRINE.md  README.md  ROADMAP.md  desktop.ini  pyproject.toml  requirements.txt  tash push -u -m WIP QEFC-001 ledger bootstrap
QEFC/: BENCHMARKING.md  MULTIVERSE_LOGIC_FRAMEWORK.md  MULTIVERSE_SYSTEM.md  QECF_CORE_THEORY.md  QECF_SPEC.md  QLF_MULTIVERSE.py  QLF_MULTIVERSE_Benchmark_Visualization.py  QLF_Preprint.md  README.MD  STATE_CONTROLLER.md  _SOVEREIGN_ENGINE_V2_RESEARCH.md  sovereign_manifesto.md
config/: instruments.yaml
core/: instrument_registry.py  qefc_engine.py  risk_engine.py  sovereign_allocator.py  types.py
data/: __init__.py  data_loader.py  feature_engineer.py
docs/: DOCTRINE_CHANGELOG.md  ORG_DOCTRINE.md
docs/agent-ledger/: CONTRACT.md  DECISIONS.md  README.md  TASKBOARD.md
docs/agent-ledger/tasks/: QEFC-001.md  QEFC-001_006-note.md  QEFC-002.md  QEFC-003.md  QEFC-004.md  QEFC-005.md  QEFC-006.md  QEFC-007.md  QEFC-008.md  QEFC-009.md  QEFC-010.md  QEFC-011.md  QEFC-012.md  QEFC-013.md  QEFC-014.md  QEFC-015.md  QEFC-016.md  TEMPLETE.md
scripts/: new_task.py  qefc_mark_done.py
simulation/: virtual_broker.py
tests/: test_data_loader.py  test_feature_engineer.py  test_instrument_registry.py  test_qefc_engine.py  test_risk_engine.py  test_sovereign_allocator.py  test_type_contracts.py  test_virtual_broker.py
type/: __init__.py  core.py
